[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "carbon-md"
version = "0.0.1"
description = "Python SDK for carbon.md — the open standard for carbon-governed AI agents. Placeholder release; the SDK (EcoLogits wrapper + LangGraph callback) is in development."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "Agentic Realism", email = "carbon@agentic-realism.com" }]
keywords = ["ai", "agents", "carbon", "sustainability", "llm", "emissions", "climate"]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
]

[project.urls]
Homepage = "https://github.com/carbon-md/carbon-md"
Repository = "https://github.com/carbon-md/carbon-md"
Issues = "https://github.com/carbon-md/carbon-md/issues"
